# multimodal-fashion-search

./: .gitignore  README.md  app.py  main.ipynb  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
